# extrae_paraver_test

./: .gitignore  CMakeLists.txt  README.md
config/: extrae.xml.in
scripts/: configure_samurai_extrae.sh  run_demo.sh  run_samurai_extrae.sh
src/: main.cpp
